<resources>
    <string name="app_name">ContactsProject</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="asc">Asc</string>
    <string name="desc">Desc</string>
    <string name="delete">Delete</string>
    <string name="contact_name">Enter Name</string>
    <string name="contact_id">Contact ID</string>
    <string name="contact_phone">Enter Phone </string>
    <string name="not_assigned">Not Assigned</string>
    <string name="textview">ID</string>
    <string name="nameView">Name</string>
    <string name="phoneView">Phone</string>
    <string name="todo">TODO</string>
</resources>